Added more of Shan's models

--- a/modellistextra.yml
+++ b/modellistextra.yml
@@ -293,6 +293,7 @@ Codomain:
     - MiXaV/B_EX150
     - Shananas/B_EX150
     - MiXaV/B_EX150_LV99
+    - Shananas/B_EX150_LV99
     Saix:
     - MiXaV/B_EX160
     - MiXaV/B_EX160_LV99
@@ -305,6 +306,7 @@ Codomain:
     - MiXaV/B_EX170_LAST_LV99
     Luxord's Cards:
     - Shananas/B_EX210
+    - Shananas/B_EX210_EH
     Roxas:
     - MiXaV/B_EX390
     - Others/Unhooded Roxas
@@ -588,6 +590,7 @@ Codomain:
     - MiXaV/M_EX850
     Creeper:
     - MiXaV/M_EX880
+    - Shananas/M_EX880
     Dragoon:
     - MiXaV/M_EX890
     Assassin:
