Roxas, that's a stick

--- a/modellistextra.yml
+++ b/modellistextra.yml
@@ -241,6 +241,7 @@ Codomain:
     - All-in-One/W_EX010_OmegaWeapon
     - All-in-One/W_EX010_OmegaWeapon_NM
     - All-in-One/W_EX010_OmegaWeapon_TR
+    - Roxas/W_EX010_Stick
     Staff: []
     Shield: []
   Chest:
