Fire & Blizzard Lord

--- a/modellistextra.yml
+++ b/modellistextra.yml
@@ -254,10 +254,10 @@ Codomain:
     Genie Jafar:
     - MiXaV/B_AL020
     Volcanic Lord:
-    - MiXaV/B_AL100_1ST
+    - MiXaV/B_AL100_FIRE #_1ST
     - MiXaV/B_AL100_FIRE
     Blizzard Lord:
-    - MiXaV/B_AL100_2ND
+    - MiXaV/B_AL100_ICE #_2ND
     - MiXaV/B_AL100_ICE
     Thresholder:
     - Original/B_BB100
