Removed Nightmare Kairi!Dancer

--- a/modellistextra.yml
+++ b/modellistextra.yml
@@ -612,8 +612,7 @@ Codomain:
     - MiXaV/M_EX910
     Sniper:
     - MiXaV/M_EX920
-    Dancer:
-    - Shananas/M_EX930
+    Dancer: []
     Berserker:
     - MiXaV/M_EX940
     Gambler:
