--- a/modellist.yml
+++ b/modellist.yml
@@ -332,6 +332,13 @@ Weapon:
     - All-in-One/W_EX010_OmegaWeapon_NM
     - All-in-One/W_EX010_OmegaWeapon_TR
     - Roxas/W_EX010_Stick
+    - Zurph/W_EX010_30
+    - Zurph/W_EX010_40
+    - Zurph/W_EX010_40_NM
+    - Zurph/W_EX010_40_TR
+    - Zurph/W_EX010_U0
+    - Zurph/W_EX010_V0
+    - Zurph/W_EX010_W0
   Staff:
     Base:
     - W_EX020
