Roxas Cosplaying KH1 Sora

--- a/modellist.yml
+++ b/modellist.yml
@@ -113,6 +113,7 @@ Party:
     - Roxas/Coat/P_EX100_XM_KH1F
     - Roxas/Coat/P_EX100_XM_TRIF
     - Roxas/Coat/P_EX100_XM_ULTF
+    - Others/Roxas Cosplaying KH1 Sora
     - Dee-Ayy/P_EX100
     - Dee-Ayy/P_EX100_BTLF
     - Dee-Ayy/P_EX100_MAGF
