--- a/modellist.yml
+++ b/modellist.yml
@@ -730,6 +730,7 @@ Enemy:
     ExtraCodomain:
     - MiXaV/B_EX390
     - Others/Unhooded Roxas
+    - Dee-Ayy/B_EX390
     - Hooded/B_EX390
   Larxene:
     Base:
