--- a/modellist.yml
+++ b/modellist.yml
@@ -121,6 +121,14 @@ Party:
     - Dee-Ayy/P_EX100_TRIF
     - Dee-Ayy/P_EX100_ULTF
     - Dee-Ayy/P_EX100_HTLF
+    - FrederykStrife/P_EX100
+    - FrederykStrife/P_EX100_BTLF
+    - FrederykStrife/P_EX100_MAGF
+    - FrederykStrife/P_EX100_KH1F
+    - FrederykStrife/P_EX100_TRIF
+    - FrederykStrife/P_EX100_ULTF
+    - FrederykStrife/P_EX100_HTLF
+    - FrederykStrife/Purple/Purple Drip
   Lion Sora:
     Base:
     - P_LK100
